# faramesh-guard

./: .gitignore  GUARD_V1_COMPLETE.md  IMPLEMENTATION_STATUS.md  LICENSE  README-new.md  README.md  SECURITY.md
.github/workflows/: release.yml
cloud/: .env.example  DNS_SETUP.md  PRODUCTION_SETUP.md
cloud/workers/guard-enroll/: package.json  wrangler.toml
cloud/workers/guard-ingest/: package.json  schema.sql  wrangler.toml
cloud/workers/guard-support/: package.json  wrangler.toml
cloud/workers/guard-transparency/: schema.sql  wrangler.toml
daemon/: __init__.py  cli.py  guard_system.py  main.py  requirements.txt
daemon/api/: __init__.py  approvals.py  decide.py
daemon/config/: cloud_config.py
daemon/core/: __init__.py  car.py  car_hash.py  execution_wrapper.py  fail_closed.py  permit.py  permit_tracking.py  runtime_registry.py
daemon/service/: __init__.py  adversarial_detector.py  behavioral_anomaly.py  integration.py  pending_actions.py  signal_fusion.py
daemon/tests/: test_all_components.py  test_extractors.py  test_invariants.py  test_rust_core_fallback.py
docs/: TUF_KEY_POLICY.md
install/: install.sh  install_windows_service.ps1  uninstall.sh
integrations/openclaw/: README.md  STATUS.md  package-lock.json  package.json  tsconfig.json
rust-core/: Cargo.toml  README.md
rust-core/benches/: hot_path.rs
rust-core/src/: cache.rs  car.rs  error.rs  ipc.rs  lib.rs  permit.rs  replay.rs
scripts/: gpg-keygen.sh  tuf-bootstrap.sh  tuf-keygen.sh  tuf-sign.py
spec/guard-v1/: CAR-schema.json  README.md  aab-contract.md  canonicalization.md  openclaw-tool-mapping.md  permit-artifacts.md  policy-modes.md  threat-model.md  versioning.md
ui/: README.md  index.html  package.json
ui-swift/FarameshGuard/: FarameshGuardApp.swift  GuardState.swift  Package.resolved  Package.swift
ui/src/: App.tsx  styles.css  types.ts
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: main.rs
(+118 files in other folders)
